infra/miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app.kubernetes.io/name: miniflux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  template:
    metadata:
      namespace: miniflux
      labels:
        app.kubernetes.io/name: miniflux
    spec:
      containers:
        - image: miniflux/miniflux:2.2.4@sha256:20adbf84f0d8cd24b4ebbc138e31087419a274fd9c717c6a909b0773b4538b98
          name: miniflux
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
              cpu: "100m"
            requests:
              cpu: "50m"
              memory: "100Mi"
          securityContext:
            readOnlyRootFilesystem: true
          livenessProbe:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "miniflux -healthcheck auto"
          readinessProbe:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - "miniflux -healthcheck auto"
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: miniflux
  name: miniflux
  namespace: miniflux
spec:
  selector:
    app.kubernetes.io/name: miniflux
  ports:
    - name: http
      port: 8080
